--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,13 @@
       }
     ],
     "require": {
-      "php": ">=7.4"
+        "php": ">=7.4",
+        "guzzlehttp/guzzle": "^7.3",
+        "monolog/monolog": "^2.9"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.0 || ^9.0",
+        "friendsofphp/php-cs-fixer": "^3.5"
     },
     "autoload": {
       "psr-4": { "Cresenity\\Vendor\\Wago\\": "src/" }
